# pypkatool

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment-pdbfixer.yml  environment-py27.yml  environment.yml  pyproject.toml
docs/: api.md  citation.md  conf.py  failure_modes.md  fixstructure.md  force_field.md  index.md  installation.md  requirements.txt  tautomer_mapping.md  usage.md  validation.md
pypkatool/: __init__.py  core.py
pypkatool/data/: fixstructure_worker.py
tests/: test_pypkatool.py
tests/fixtures/1a2p_barnase_pH7.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/1bpi_bpti_pH7.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/1pgb_proteing_pH7.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/1stn_snase_pH7.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/2hg0_westnile_pH5.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/2trx_thioredoxin_pH7.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/3j27_dengue_pH5.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/7rsa_rnasea_pH7.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/denv2_pH5.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/denv3_pH5.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/lysozyme_pH7.0/: detail.json  protocol.json  protonation_inputs.json
tests/fixtures/rocv_em_pH5.0/: detail.json  protocol.json  protonation_inputs.json
(+12 files in other folders)
